# rosbridge_demo

./: .dockerignore  .gitignore  Makefile  README.md
cpp_client/: CMakeLists.txt  client.cpp
docker/: Dockerfile_client  Dockerfile_cpp  Dockerfile_ros  entrypoint.sh
ros_pose_gen/: CMakeLists.txt  package.xml  ros_pose_gen.repos
ros_pose_gen/launch/: pose_server.launch
ros_pose_gen/scripts/: random_pose_server.py
ros_pose_gen/srv/: GenRandomPose.srv
roslibpy_client/: roslibpy_client.py
